<resources>
    <string name="app_name">Sushi and Pizza</string>
    <string name="info_main">Доставка суши и пиццы — онлайн сервис заказа суши и пиццы в Москве.</string>
    <string name="time_main">Время приема заказов: с 9:00 до 23:00</string>
    <string name="telephone_main">Телефон\n+7 (977) 927-83-40</string>
    <string name="menu_main">Открыть меню</string>
    <string name="profile_main">Войти в профиль</string>
    <string name="registration_main">Регистрация</string>
    <string name="profile_line">Введите логин и пароль</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="profile_login">Войти</string>
</resources>