<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:background="@color/black"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/Sushi_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:background="@color/black"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/Pizza_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="193dp"
        android:layout_height="110dp"
        android:background="@color/black"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Empty"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:fontFamily="monospace"
            android:textColor="@color/white"
            android:textSize="@dimen/in_sp20"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/Name_cafe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/in_sp20"
            android:textStyle="bold"
            android:typeface="monospace" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="210dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/Description"
            android:layout_width="269dp"
            android:layout_height="72dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:fontFamily="monospace"
            android:text="@string/info_main"
            android:textColor="@color/white"
            android:textSize="@dimen/in_sp14"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/Time"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/Description"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:fontFamily="monospace"
            android:text="@string/time_main"
            android:textColor="@color/white"
            android:textSize="@dimen/in_sp14"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/Telephone_main"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_below="@+id/Time"
            android:layout_marginTop="0dp"
            android:fontFamily="monospace"
            android:text="@string/telephone_main"
            android:textColor="@color/white"
            android:textSize="@dimen/in_sp14"
            android:textStyle="bold"
            android:typeface="monospace" />

        <ImageView
            android:id="@+id/Logo_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/Time"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@+id/Description"
            app:srcCompat="@mipmap/ic_launcher" />

    </RelativeLayout>

    <Button
        android:id="@+id/Menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/black"
        android:fontFamily="monospace"
        android:text="@string/menu_main"
        android:textColor="@color/white"
        android:textSize="@dimen/in_sp14"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/Registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/black"
        android:fontFamily="monospace"
        android:text="@string/registration_main"
        android:textColor="@color/white"
        android:textSize="@dimen/in_sp14"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/RelativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:fontFamily="monospace"
        android:text="@string/profile_main"
        android:textColor="@color/white"
        android:textSize="@dimen/in_sp14"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/Registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Menu" />

</androidx.constraintlayout.widget.ConstraintLayout>